launch flower with dev

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/footer.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <small>
   <ul class="company">
-    <li>© {{ cookiecutter.full_name }}</li>
+    <li>{{ cookiecutter.full_name }}</li>
   </ul>
 
     <ul class="footer-nav">
