webpack expose jquery

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/public/test.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/public/test.html
@@ -484,5 +484,15 @@
         </tfoot>
     </table>
 </div>
+
+<script>
+$('#example').DataTable({
+    layout: {
+        topStart: {
+            buttons: ['copy', 'csv', 'excel', 'pdf']
+        }
+    }
+});
+</script>
 {% endblock %}
 {% endraw %}
